# r-redis

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
benches/: resp.rs
examples/: dredis.rs
src/: lib.rs  main.rs  network.rs
src/backend/: mod.rs
src/cmd/: echo.rs  err.rs  hmap.rs  map.rs  mod.rs  set.rs
src/resp/: array.rs  boolean.rs  bulk_string.rs  decode.rs  double.rs  encode.rs  err.rs  integer.rs  map.rs  mod.rs  null.rs  resp_frame.rs  set.rs  simple_error.rs  simple_string.rs
src/respv2/: mod.rs  parser.rs  parser_len.rs
