[package]
name = "rredis"
version = "0.1.0"
edition = "2021"
authors = ["hedonwang"]
description = "R-Redis is a redis server implemented in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.85"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
enum_dispatch = "0.3.13"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "fs",
    "macros",
    "io-util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
